<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#ffffff">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cd_food_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/cd_fname"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-10dp"
            android:src="@drawable/cc2" />

        <TextView
            android:id="@+id/cd_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@id/cd_food_image"
            android:text="@string/food"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cd_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cd_fname"
            android:layout_alignStart="@+id/cd_fname"
            android:layout_marginTop="5dp"
            android:text="@string/pay"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cd_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cd_amount"
            android:layout_alignStart="@+id/cd_fname"
            android:layout_marginTop="5dp"
            android:text="@string/size"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/del_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cd_change_addr"
            android:layout_alignStart="@+id/cd_delivery"
            android:text="@string/cod_is_available_only"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignStart="@id/delivery"
            android:layout_alignEnd="@id/cd_total_dish"
            android:background="@color/Gray"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/cd_change_addr" />

        <TextView
            android:id="@+id/delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cd_food_image"
            android:layout_alignStart="@+id/cd_food_image"
            android:layout_marginTop="25dp"
            android:text="@string/delivery_place"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cd_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delivery"
            android:layout_alignStart="@+id/cd_food_image"
            android:layout_alignEnd="@+id/cd_total_dish"
            android:maxWidth="200dp"
            android:maxLines="6"
            android:padding="4dp"
            android:text="@string/delivery_data"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/cd_change_addr"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_below="@+id/cd_delivery"
            android:layout_alignEnd="@+id/cd_total_dish"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/change"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/del_type"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/cd_confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="2dp"
                android:backgroundTint="@color/orangeRed"
                android:text="@string/buy"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/cancle"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_toRightOf="@+id/cd_confirm_btn"
                android:backgroundTint="@color/orangeRed"
                android:text="@string/cancle"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>


        <NumberPicker
            android:id="@+id/cd_total_dish"
            android:layout_width="30dp"
            android:layout_height="90dp"
            android:layout_below="@+id/cd_fname"
            android:layout_alignTop="@id/cd_fname"
            android:layout_marginStart="160dp"
            android:layout_marginTop="-3dp"
            android:layout_toEndOf="@id/cd_food_image">

        </NumberPicker>


    </RelativeLayout>

</android.support.v7.widget.CardView>
