<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/com_pro"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/com_pro" />
        <TextView
            android:id="@+id/com_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="15sp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/com_pro"
            android:layout_marginStart="8dp"
            />
    <TextView
        android:id="@+id/com_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_22_10_2018"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_toEndOf="@id/com_username"
        android:layout_alignTop="@+id/com_username"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        />

        <RatingBar
            android:id="@+id/com_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/com_username"
            android:layout_marginEnd="12dp"
            android:progressTint="@android:color/holo_blue_light"
            android:rating="4" />

        <TextView
            android:id="@+id/com_comment"
            android:layout_below="@+id/com_pro"
            android:layout_alignStart="@+id/com_username"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="-5dp"
            android:text="@string/comment_here_what_is_want"
            android:maxLines="15"
            />

    </RelativeLayout>
