<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/a2"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_header"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:civ_border_color="#ffffff"
            app:civ_border_width="1dp"
            android:src="@drawable/com_pro"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/user_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/user_profile_header"
            android:layout_alignTop="@+id/user_profile_header"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/card_id_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/user_name_header"
            android:layout_below="@+id/user_name_header"
            android:layout_marginTop="3dp"
            android:text="4334" />

        <TextView
            android:id="@+id/clg_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/user_name_header"
            android:layout_below="@id/card_id_header"
            android:layout_marginTop="3dp"
            android:maxLines="2"
            android:maxWidth="200dp"
            android:text="@string/krishna_enginnering_college" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_below="@id/user_profile_header"
            android:layout_alignStart="@id/user_profile_header"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimaryDark"
            />

 </RelativeLayout>


